# HelloOpenGL

./: CMakeLists.txt  main.cpp
res/shaders/: basic.shader
